objects/LLC_BI__Deposit_Rate_Structure__c.object
<CustomObject>
    <description>This object stores deposit rate structure templates that are cloned and associated to deposits upon deposit origination.</description>
    <fields>
        <fullName>LLC_BI__Is_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional checkbox indicates if this deposit rate structure is a template.</description>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>This optional picklist indicates the type of rate structure used on the deposit rate structure.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Progressive</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Time-Based</fullName>
                </value>
                <value>
                    <fullName>Tiered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. When importing data into nCino, the field can also be used to efficiently associate related records without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Deposit Rate Structure</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deposit Rate Structure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deposit Rate Structures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>